fixing up more boilerplate for server commands and DB connections

--- a/.env.example
+++ b/.env.example
@@ -26,4 +26,4 @@ USE_SECRET_MANAGER=false
 LOG_LEVEL=info
 
 # Database Configuration
-DB_CONNECTION_STRING=postgres://postgrse:p@ssw0rd@localhost:5432/opentriviaonline
+DB_CONNECTION_STRING=postgres://postgrse:p@ssw0rd@localhost:5432/opentriviaonline?sslmode=disable
