adding logging and some new services and unit testing

--- a/.env.example
+++ b/.env.example
@@ -23,7 +23,7 @@ USE_SECRET_MANAGER=false
 # These values are required, but can be loaded from AWS Parameter Store as long as the above values are set.
 
 # Logging Configuration
-LOG_LEVEL=info
+DEBUG_MODE=true
 
 # Database Configuration
 DB_CONNECTION_STRING=postgres://postgrse:p@ssw0rd@localhost:5432/opentriviaonline?sslmode=disable
