using more interfaces, getting emails setup, middleware, auth, controllers.

--- a/.env.example
+++ b/.env.example
@@ -27,3 +27,10 @@ DEBUG_MODE=true
 
 # Database Configuration
 DB_CONNECTION_STRING=postgres://postgrse:p@ssw0rd@localhost:5432/opentriviaonline?sslmode=disable
+
+# Authentication Configuration
+AUTH_HASH_PEPPER=xxx
+JWT_SECRET_KEY=xxx
+
+# Email Configuration
+SENDGRID_API_KEY=SG.xxx
