--- a/.env.example
+++ b/.env.example
@@ -9,6 +9,7 @@
 # Application Environment
 # Options: local, dev, prod
 CLOUD_ENV=local
+CORS_ALLOWED_ORIGIN="http://localhost:4200"
 
 # Logging Configuration
 DEBUG_MODE=true
@@ -19,6 +20,7 @@ DB_CONNECTION_STRING=postgres://postgrse:p@ssw0rd@localhost:5432/opentriviaonlin
 # Authentication Configuration
 AUTH_HASH_PEPPER=xxx
 JWT_SECRET_KEY=xxx
+COOKIE_DOMAIN="localhost"
 
 # Email Configuration
 SENDGRID_API_KEY=SG.xxx
